--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen 8080 http2;
+    listen 8080;
 
     client_max_body_size 3M;
     client_body_buffer_size 128k;
